# routes/category.routes.js
@@ -1,0 +1,7 @@
+const express = require("express");
+const router = express.Router();
+const {createCategory} = require("../controllers/category.controllers");
+
+router.post("/category/create", createCategory);
+
+module.exports = router;
