# routes/product.routes.js
@@ -1,0 +1,7 @@
+const express = require("express");
+const router = express.Router();
+const {createProduct} = require("../controllers/product.controllers");
+
+router.post("/product/create", createProduct);
+
+module.exports = router;
